ceph-objectstore-tool: better error message if pgid and object do not match

Fixes: https://tracker.ceph.com/issues/41913
Signed-off-by: Sage Weil <sage@redhat.com>